Fix layout issues and update resource paths for GitHub Pages1

--- a/css/style.css
+++ b/css/style.css
@@ -7998,6 +7998,7 @@ button.bg-dark:focus {
   .m-sm-n5 {
     margin: -3rem !important;
   }
+
   /*!
  * Bootstrap v4.5.3 (https://getbootstrap.com/)
  * Copyright 2011-2020 The Bootstrap Authors
@@ -12901,12 +12902,35 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .progress {
-  display: flex;
-  height: 1rem;
-  overflow: hidden;
-  line-height: 0;
-  font-size: 0.75rem;
-  background-color: #e9ecef;
+  border-radius: 10px;
+  height: 20px !important;
+}
+
+.progress .progress-bar {
+  width: 0;
+  height: 20px !important;
+  border-radius: 10px;
+  transition: width 2s ease-in-out;
+}
+
+.bg-primary {
+  background-color: #0BCEAF !important;
+}
+
+.bg-warning {
+  background-color: #ffc107 !important;
+}
+
+.bg-danger {
+  background-color: #dc3545 !important;
+}
+
+.bg-info {
+  background-color: #17a2b8 !important;
+}
+
+.bg-dark {
+  background-color: #343a40 !important;
 }
 
 .progress-bar {
@@ -13140,17 +13164,6 @@ a.badge-dark:focus, a.badge-dark.focus {
 .list-group-item-success.list-group-item-action:hover, .list-group-item-success.list-group-item-action:focus {
   color: #155724;
   background-color: #b1dfbb;
-}
-
-.list-group-item-success.list-group-item-action.active {
-  color: #fff;
-  background-color: #155724;
-  border-color: #155724;
-}
-
-.list-group-item-info {
-  color: #0c5460;
-  background-color: #bee5eb;
 }
 
 .list-group-item-info.list-group-item-action:hover, .list-group-item-info.list-group-item-action:focus {
@@ -17470,12 +17483,35 @@ h4, h5, h6 {
 }
 
 .progress {
-  height: 5px;
+  border-radius: 10px;
+  height: 20px !important;
 }
 
 .progress .progress-bar {
-  width: 0px;
-  transition: 2s;
+  width: 0;
+  height: 20px !important;
+  border-radius: 10px;
+  transition: width 2s ease-in-out;
+}
+
+.bg-primary {
+  background-color: #0BCEAF !important;
+}
+
+.bg-warning {
+  background-color: #ffc107 !important;
+}
+
+.bg-danger {
+  background-color: #dc3545 !important;
+}
+
+.bg-info {
+  background-color: #17a2b8 !important;
+}
+
+.bg-dark {
+  background-color: #343a40 !important;
 }
 
 .service-item i {
@@ -17547,4 +17583,5 @@ h4, h5, h6 {
   margin: 0;
   padding: 0;
   list-style-type: none;
+}
 }
